[package]
name = "meme-trend-agent"
version = "0.1.0"
edition = "2021"
build = "build.rs" # Tell Cargo to use the build script

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
wasm-bindgen-futures = "0.4.34"

# Add this new section for the build script's dependencies
[build-dependencies]
dotenvy = "0.15"
